--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,7 @@ body {
   padding: 3px 5px;
   border-radius: 3px;
   display: inline-block;
-  background: red;
+  background: rgb(255, 0, 0);
 }
 
 .five .idea-5 {
